# pegafox-mc3

./: .gitmodules  README.md
mc3_programs/: fill_screen.s  minimal_program.c  paletteTest.s  sandbox.s  snake.s
mc3_programs/C/: display_test.c  drive_test.c  hello_world.c  minimal_program.c
mc3_tools/: CMakeLists.txt  mc3_utils.hpp
mc3_tools/C_compiler/: README.md  assemble_ir.hpp  main.cpp  optimize_asm.hpp
mc3_tools/C_compiler/libc/include/: assert.h  limits.h  mc3.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h  threads.h
mc3_tools/C_compiler/libc/lib/: memcpy.c  memset.c  rand.c  srand.c
mc3_tools/assembler/: assemble.hpp  expression.hpp  format_elf.hpp  handle_args.hpp  main.cpp  preprocessor.hpp  tokenize.hpp
mc3_tools/disassembler/: disassemble_instruction.hpp  handle_args.hpp  main.cpp
mc3_tools/elf_handler/: elf.cpp  elf.hpp
mc3_tools/emulator/: clock.hpp  debug_window.hpp  handle_args.hpp  hdd.hpp  keyboard.hpp  main.cpp  mouse.hpp  speaker.hpp  tty.hpp  vga.hpp  virt_machine.hpp
